--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "cytay-nauczycieli",
-  "version": "0.0.1",
+  "name": "my-boilerplate",
+  "version": "1.1.0",
   "description": "My very own personal boilerplate.",
   "main": "index.js",
   "scripts": {
@@ -8,19 +8,23 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bibixx/my-boilerplate.git"
+    "url": "https://github.com/bibixx/my-boilerplate"
   },
   "author": "bibixx",
   "license": "MIT",
   "dependencies": {
     "babel-preset-es2015": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
     "babelify": "^7.3.0",
-    "browserify": "^13.1.0",
     "browser-sync": "^2.16.0",
     "browser-sync-client-transition": "gist:e6ad215ccff2c6788c584770df9f0f09",
+    "browserify": "^13.1.0",
+    "chalk": "^1.1.3",
+    "flux": "^3.1.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-babel": "^6.1.2",
+    "gulp-filter": "^4.0.0",
     "gulp-pug": "^3.0.4",
     "gulp-rename": "^1.2.2",
     "gulp-rollup": "^2.5.1",
@@ -29,13 +33,19 @@
     "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.7",
     "gulp-watch": "^4.3.10",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "vinyl-transform": "^1.0.0",
+    "watchify": "^3.8.0",
     "yargs": "^5.0.0"
   },
-  "bugs": {
-    "url": "https://github.com/bibixx/my-boilerplate/issues"
-  },
-  "homepage": "https://github.com/bibixx/my-boilerplate#readme"
+  "devDependencies": {
+    "eslint": "^3.9.0",
+    "eslint-config-airbnb": "^12.0.0",
+    "eslint-plugin-import": "^2.0.1",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-react": "^6.4.1"
+  }
 }
