Fixed date, teacher id and icon problems

--- a/package.json
+++ b/package.json
@@ -20,16 +20,19 @@
     "browser-sync-client-transition": "gist:e6ad215ccff2c6788c584770df9f0f09",
     "browserify": "^13.1.0",
     "chalk": "^1.1.3",
+    "del": "^2.2.2",
     "flux": "^3.1.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-babel": "^6.1.2",
     "gulp-filter": "^4.0.0",
+    "gulp-if": "^2.0.2",
     "gulp-pug": "^3.0.4",
     "gulp-rename": "^1.2.2",
     "gulp-rollup": "^2.5.1",
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.6.0",
+    "gulp-strip-debug": "^1.1.0",
     "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.7",
     "gulp-watch": "^4.3.10",
