--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/cytaty/cytaty.github.io"
+    "url": "https://github.com/cytaty/cytaty.github.io",
+    "ghbranch": "master"
   },
   "author": "bibixx",
   "license": "MIT",
