--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,35 @@
-version: "3"
+version: '3'
 services:
-  web:
+  php:
+    build: './php/'
     env_file:
       - .env
-    image: cytaty:latest
-    ports:
-      - "8082:80"
     networks:
-      - webnet
+      - backend
+    volumes:
+      - ./src/:/var/www/html/
+  apache:
+    build: './apache/'
+    depends_on:
+      - php
+      - mysql
+    networks:
+      - frontend
+      - backend
+    ports:
+      - "8080:80"
+    volumes:
+      - ./src/:/var/www/html/
+  mysql:
+    image: mysql:5.6.40
+    networks:
+      - backend
+    environment:
+      - MYSQL_ROOT_PASSWORD=rootpassword
+      - MYSQL_DATABASE=cytaty
+    volumes:
+      - /Users/bartoszlegiec/Projects/cytaty_db/mysql/data:/var/lib/mysql
+      - /Users/bartoszlegiec/Projects/cytaty_db/mysql/init:/docker-entrypoint-initdb.d/:ro
 networks:
-  webnet:
+  frontend:
+  backend:
