--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -3,3 +3,5 @@ RUN apk update; \
     apk upgrade;
 RUN docker-php-ext-install mysqli
 RUN docker-php-ext-install pdo_mysql
+
+COPY src/ /var/www/html/
