--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       - frontend
       - backend
     ports:
-      - "8080:80"   
+      - "80:80"   
   mysql:
     image: mysql:5.6.40
     networks:
@@ -32,4 +32,6 @@ services:
       - ~/db/mysql/init:/docker-entrypoint-initdb.d/:ro
 networks:
   frontend:
+    external:
+      name: nginx-proxy
   backend:
