--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,9 @@ services:
     build:
       context: .
       dockerfile: './php/Dockerfile'
+    container_name: cytaty_php
+    depends_on:
+      - mysql  
     env_file:
       - .env
     networks:
@@ -14,24 +17,24 @@ services:
       dockerfile: './nginx/Dockerfile'
     depends_on:
       - php
-      - mysql
-    container_name: cytaty
+    container_name: cytaty_nginx
     networks:
       - frontend
       - backend
+    ports:
+      - "8080:80"
   mysql:
-    build:
-      context: .
-      dockerfile: './mysql/Dockerfile'
+    image: mysql:8
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     networks:
       - backend
+    container_name: cytaty_mysql
     env_file:
       - .env
     volumes:
-      - /data/cytatylegiecio/data:/var/lib/mysql
-      - /data/cytatylegiecio/init/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ~/data/cytatylegiecio/data:/var/lib/mysql
+      - ~/data/cytatylegiecio/init/init.sql:/docker-entrypoint-initdb.d/init.sql
 networks:
   frontend:
     external:
