--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,8 +33,8 @@ services:
     env_file:
       - .env
     volumes:
-      - ~/data/cytatylegiecio/data:/var/lib/mysql
-      - ~/data/cytatylegiecio/init/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - /data/cytatylegiecio/data:/var/lib/mysql
+      - /data/cytatylegiecio/init/init.sql:/docker-entrypoint-initdb.d/init.sql
 networks:
   frontend:
     external:
