--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "browser-sync": "^2.16.0",
     "browserify": "^13.1.0",
     "chalk": "^1.1.3",
+    "csv-parse": "^5.4.0",
     "del": "^2.2.2",
     "flux": "^3.1.0",
     "gulp": "^3.9.1",
